Fixes cursive fonts fallbacks and the word-wrapping in SpotBox

--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -22,7 +22,7 @@
         background-color: #f0739f;
         font-size: 1.2rem;
         font-weight: 500;
-        font-family: 'Courgette';
+        font-family: "Courgette", "URW Chancery L", "Apple Chancery", sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
