--- a/src/sass/SpotBox.scss
+++ b/src/sass/SpotBox.scss
@@ -8,6 +8,7 @@
   padding: 20px;
   white-space: pre-line;
   word-break: break-word;
+  word-wrap: break-word;
   border: 1px dashed #f85a69;
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
